--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         url: jdbc:mysql://localhost:3306/multimaster?createDatabaseIfNotExist=true
         poolName: SpringBootHikariCP
         username: root
-        password:
+        password: root
         testWhileIdle: true
         validationQuery: SELECT 1
 
