--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,8 +6,8 @@ spring:
         dataSourceClassName: com.mysql.jdbc.jdbc2.optional.MysqlDataSource
         url: jdbc:mysql://localhost:3306/multitenant_unittest?createDatabaseIfNotExist=true
         poolName: SpringBootHikariCP
-        username: arrayiq-server
-        password: ArrayIQ1234
+        username: root
+        password: root
         testWhileIdle: true
         validationQuery: SELECT 1
 
