--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>1.4.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
     </dependencies>
 
 	<build>
