--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ liquibase:
 spring:
     datasource:
         dataSourceClassName: com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-        url: jdbc:mysql://localhost:3306/multimaster?createDatabaseIfNotExist=true
+        url: jdbc:mysql://localhost:3306/spring_mt?createDatabaseIfNotExist=true
         poolName: SpringBootHikariCP
         username: root
         password: root
@@ -22,9 +22,10 @@ spring:
         properties:
             hibernate.cache.use_second_level_cache: false
             hibernate.cache.use_query_cache: false
-            hibernate.generate_statistics: true
+            hibernate.generate_statistics: false
             hibernate.hbm2ddl.auto: validate
 
 logging:
     level:
+        me.lcardito.spring: DEBUG
         org.springframework.security: DEBUG
